Maven idioms